--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -9,7 +9,7 @@ Fonts are separated by a & */
   --primary-color: #17183b;
   --secondary-color: #ffffff ;
   --accent1-color: #c8963e;
-  --accent2-color: #e16f7c;
+  --accent2-color: rgb(3, 7, 28);
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Libre Caslon Text";
@@ -17,11 +17,11 @@ Fonts are separated by a & */
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #17183b;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
+  --headline-color-on-color: rgb(3, 7, 28); /* headlines on a colored background */ 
   --paragraph-color-on-white: #17183b; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #17183b  ;
-  --nav-link-color: #black;
+  --paragraph-color-on-color: #17183b; /* paragraph text on a colored background */ 
+  --paragraph-background-color: rgb(240, 244, 245)  ;
+  --nav-link-color: black;
   --nav-background-color: #D4AC0D;
   --nav-hover-link-color: white;
   --nav-hover-background-color: #17183b;
