--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -47,9 +47,11 @@ nav a:hover {
 }
 
 .book, .join {
-    background-color: none;
+    background-color: rgb(237, 240, 125);
     color: blue;
     text-decoration: none;
+
+
 }
 .book:hover, .join:hover {
     background-color: black;
@@ -64,7 +66,7 @@ footer {
     color: white;  
 }
 footer a {
-    background-color: none;
+    background-color: #2e4f3c;
     color: white;
     text-decoration: none;
 }
