site plan changes

--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -6,8 +6,9 @@
 
 nav a {
     text-align: center;
-    color: #2e4f3c;
+    color: white;
     text-decoration: none;
+    padding: 35px;
 }
 
 #hero-msg h1, #hero-msg h4 {
@@ -30,26 +31,36 @@ main section {
 
 #background {
     height: 725px;
-    background-color: #2e4f3c;
+    background-color: rgb(188, 171, 70);
     color: blue;
 }
 
 body {
     background-color: white; 
+    font-family: "signica", "Bradley Hand", "sans-serif";
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+
 }
 header {
-    background-color: white;
+    background-color: #344c3e;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande';
 }
 nav a:hover {
-    background-color: black;
+    background-color: white;
     color: white;
   
 }
 
 .book, .join {
-    background-color: rgb(237, 240, 125);
-    color: blue;
+    background-color: #344c3e;
+    color: white;
     text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin: 50px;
+    border-radius: 5px;
 
 
 }
@@ -58,41 +69,29 @@ nav a:hover {
     color: white;
 }
 .msg {
-    background-color: rgb(237, 240, 125);
+    background-color: rgb(188, 171, 70);
+    line-height: 1.5em;
+    padding: 35px;
 }
 
 footer {
-    background-color: #2e4f3c;
-    color: white;  
+    background-color: #344c3e;
+    color: rgb(188, 171, 70);  
+    margin-top: 200px;
 }
 footer a {
     background-color: #2e4f3c;
-    color: white;
+    color: rgb(188, 171, 70);
     text-decoration: none;
+    padding: 25px 50px;
 }
 footer a:hover {
     background-color: rgb(214, 214, 110);
     color: white;
-    
-}
+}  
 
-.home-title {
-    color: #2e4f3c;
-}
-
-h4 {
-    color: #2e4f3c;
-}
-
-.msg h2, .msg p {
-    color: #2e4f3c;
-}
-
-.logo {
-    width: 80px;
-}
-.icon {
-    width: 80px;
+footer .social img {
+    padding-top: 15px;
 }
 
 footer p {
@@ -101,4 +100,57 @@ footer p {
 
 footer p a:hover {
     text-decoration: underline;
+}
+
+.home-title {
+    color: #2e4f3c;
+    font-family: "Libre Caslon Text";
+    font-size: 2em;
+    margin: 10px;
+
+}
+
+h4 {
+    color: #2e4f3c;
+}
+
+.msg p {
+    color: #2e4f3c;
+    font-size: .8em;
+    padding-bottom: 15px;
+}
+
+h2 {
+    margin: 0;
+}
+
+.msg h2 {
+    font-family: "Libre Caslon Text";
+    color: #2e4f3c
+}
+
+.logo {
+    width: 80px;
+}
+
+#logo-link {
+    padding-top: 5px;
+}
+
+.icon {
+    width: 80px;
+    padding-top: 10px;
+}
+
+
+.rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+
+.card-image {
+    border: 10px solid #000;
+}
+
+main section img {
+    box-sizing: border-box;
 }
