--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -76,12 +76,12 @@ nav a:hover {
 
 footer {
     background-color: #344c3e;
-    color: rgb(188, 171, 70);  
+    color: white;  
     margin-top: 200px;
 }
 footer a {
     background-color: #2e4f3c;
-    color: rgb(188, 171, 70);
+    color: white;
     text-decoration: none;
     padding: 25px 50px;
 }
