--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -1,15 +1,40 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Libre+Caslon+Text&family=Lora&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Caslon+Text&family=Lora&family=Merienda:wght@500&display=swap');
+
 #content {
     max-width: 1600px;
     margin: 0 auto;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 
 nav a {
     text-align: center;
     color: white;
     text-decoration: none;
-    padding: 35px;
+    padding: 20px;
+}
+
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px; 
+    
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
 }
 
 #hero-msg h1, #hero-msg h4 {
@@ -27,6 +52,11 @@ nav a {
 
 main section {
     text-align: center;
+    
+}
+
+.home-grid {
+    display: grid;
 }
 
 
@@ -34,6 +64,8 @@ main section {
     height: 725px;
     background-color: rgb(188, 171, 70);
     color: blue;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 body {
@@ -46,10 +78,13 @@ body {
 }
 header {
     background-color: #344c3e;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande';
-}
+    font-family: 'Lora', 'Lucida Sans Regular', 'Lucida Grande';
+    display: grid;
+    grid-template-columns: 150px auto;
+    }
+
 nav a:hover {
-    background-color: white;
+    background-color: rgb(188, 171, 70);
     color: white;
   
 }
@@ -71,14 +106,19 @@ nav a:hover {
 }
 .msg {
     background-color: rgb(188, 171, 70);
-    line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
 footer {
     background-color: #344c3e;
     color: white;  
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer a {
     background-color: #2e4f3c;
@@ -87,7 +127,7 @@ footer a {
     padding: 25px 50px;
 }
 footer a:hover {
-    background-color: rgb(214, 214, 110);
+    background-color: rgb(188, 171, 70);
     color: white;
 }  
 
@@ -104,15 +144,17 @@ footer p a:hover {
 }
 
 .home-title {
-    color: #2e4f3c;
-    font-family: "Libre Caslon Text";
+    color: rgb(188, 171, 70);
+    font-family: "merienda";
     font-size: 2em;
     margin: 10px;
 
 }
 
 h4 {
-    color: #2e4f3c;
+    color: rgb(188, 171, 70);
+    font-family: "merienda";
+    font-size: 25px;
 }
 
 .msg p {
@@ -127,7 +169,7 @@ h2 {
 
 .msg h2 {
     font-family: "Libre Caslon Text";
-    color: #2e4f3c
+    color: #2e4f3c;
 }
 
 .logo {
@@ -136,6 +178,8 @@ h2 {
 
 #logo-link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 .icon {
@@ -146,12 +190,93 @@ h2 {
 
 .rivers-card, .camping-card, .rapids-card {
     margin: 200px 0;
+    
 }
+
+.rivers-card {
+    margin: 200px 0;
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card {
+    margin: 200px 0;
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card {
+    margin: 200px 0;
+    grid-column: 8/10;
+    grid-row: 2/3;
+    
+}
+
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+
 
 .card-image {
     border: 10px solid #000;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px rgb(188, 171, 70);
+}
+
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+.card-image, .mountain {
+    width: 100%;
 }
 
 main section img {
     box-sizing: border-box;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
