--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -57,6 +57,7 @@ main section {
 
 .home-grid {
     display: grid;
+    grid-template-columns: repeat(10, 1fr);
 }
 
 
@@ -119,12 +120,13 @@ footer {
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding: 25px 50px;
 }
 footer a {
     background-color: #2e4f3c;
     color: white;
     text-decoration: none;
-    padding: 25px 50px;
+    
 }
 footer a:hover {
     background-color: rgb(188, 171, 70);
@@ -194,19 +196,16 @@ h2 {
 }
 
 .rivers-card {
-    margin: 200px 0;
     grid-column: 2/4;
     grid-row: 2/3;
 }
 
 .camping-card {
-    margin: 200px 0;
     grid-column: 5/7;
     grid-row: 2/3;
 }
 
 .rapids-card {
-    margin: 200px 0;
     grid-column: 8/10;
     grid-row: 2/3;
     
@@ -220,10 +219,12 @@ h2 {
 }
 
 
-.card-image {
-    border: 10px solid #000;
+
+.card-img {
+    border: 10px rgb(188, 171, 70) solid;
     transition: transform .5s;
     box-shadow: 5px 5px 10px rgb(188, 171, 70);
+   
 }
 
 .card-img:hover {
@@ -231,7 +232,7 @@ h2 {
     transform: scale(1.1);
 }
 
-.card-image, .mountain {
+.card-img, .mountain {
     width: 100%;
 }
 
