--- a/duotech-unlimited/styles/site-plan.css
+++ b/duotech-unlimited/styles/site-plan.css
@@ -5,25 +5,25 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: white   ;
-  --secondary-color: rgb(16, 16, 60) ;
-  --accent1-color: #472217;
-  --accent2-color: black;
+  --primary-color: #fbfbfb;
+  --secondary-color: #070706 ;
+  --accent1-color: #0e6ba8;
+  --accent2-color: #0a2472;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Lora";
   --paragraph-font: "Libre+Caslon", sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: rgb(16, 16, 60);  /* headlines on a white background */ 
+  --headline-color-on-white: #0a2472;  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: rgb(16, 16, 60); /* paragraph text on a white background */ 
+  --paragraph-color-on-white: #0a2472; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: rgb(16, 16, 60)  ;
+  --paragraph-background-color: #0a2472  ;
   --nav-link-color: white;
-  --nav-background-color: #472217;
+  --nav-background-color: #070706;
   --nav-hover-link-color: white;
-  --nav-hover-background-color: #472217;
+  --nav-hover-background-color: #070706;
 }
 
 
