--- a/duotech-unlimited/styles/site-plan.css
+++ b/duotech-unlimited/styles/site-plan.css
@@ -12,7 +12,7 @@ Fonts are separated by a | */
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Lora";
-  --paragraph-font: "Libre+Caslon", sans-serif;
+  --paragraph-font: "Libre Caslon Text", sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #0a2472;  /* headlines on a white background */ 
