--- a/wwr/styles/styles.css
+++ b/wwr/styles/styles.css
@@ -281,3 +281,16 @@ main section img {
         margin-top: 25px;
     }
 }
+
+.main-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+}
+
+#background {
+    height: 725px;
+    background-color: rgb(188, 171, 70);
+    color: blue;
+    grid-column: 1/11;
+    grid-row: 4/9;
+}
