--- a/duotech-unlimited/styles/site-plan.css
+++ b/duotech-unlimited/styles/site-plan.css
@@ -6,8 +6,8 @@ Fonts are separated by a | */
 :root {
   /* change the values below to your colors from your palette */
   --primary-color: #fbfbfb;
-  --secondary-color: #070706 ;
-  --accent1-color: #0e6ba8;
+  --secondary-color: #050710;
+  --accent1-color: #D5A71C;
   --accent2-color: #0a2472;
 
   /* change the values below to your chosen font(s) */
@@ -15,12 +15,12 @@ Fonts are separated by a | */
   --paragraph-font: "Libre Caslon Text", sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #0a2472;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #0a2472; /* paragraph text on a white background */ 
+  --headline-color-on-white: #050710;  /* headlines on a white background */ 
+  --headline-color-on-color: #D5A71C; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #050710; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #0a2472  ;
-  --nav-link-color: white;
+  --paragraph-background-color: #050710  ;
+  --nav-link-color: #D5A71C;
   --nav-background-color: #070706;
   --nav-hover-link-color: white;
   --nav-hover-background-color: #070706;
