--- a/duotech-unlimited/styles/styles.css
+++ b/duotech-unlimited/styles/styles.css
@@ -4,6 +4,8 @@
 #content {
     max-width: 1600px;
     margin: 0 auto;
+    margin-left: 153px;
+    
 }
 
 nav {
@@ -71,7 +73,9 @@ footer p a:hover {
 
 
 .logo {
-    width: 100px;
+    width: 200px;
+    margin-top: -180px;
+    margin-left: -38px;
 }
 
 #logo-link {
@@ -97,25 +101,17 @@ footer p a:hover {
 .web2-photo {
     width: 50%;
     height: 20%;
-    padding: 30px;
+    padding: 50px;
     margin-right: 50px;
 
     
 }
 
-header {
-    background-color: #050710;
-    font-family: 'Lora', 'Lucida Sans Regular', 'Lucida Grande';
-    display: grid;
-    grid-template-columns: 150px auto;
-    }
-
-
 
 .msg1, .msg2, .msg3 {
     text-align: left;
     color: black;
-    font-size: 18px;
+    font-size: 17px;
 
 }
 
@@ -125,7 +121,7 @@ header {
     padding: 35px;
     grid-column: 6/10;
     grid-row: 6/7;
-    width: 35%;
+    width: 40%;
     height: 50%;
     margin-left: 35em;
     margin-top: -400px;
@@ -151,6 +147,42 @@ h1, h2, h3, h4 {
     text-align: center;
 }
 
+/* The sidebar menu */
+.sidenav {
+    height: 100%; /* Full-height: remove this if you want "auto" height */
+    width: 160px; /* Set the width of the sidebar */
+    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+    z-index: -1; /* Stay on top */
+    top: 0; /* Stay at the top */
+    left: 0;
+    background-color: #111; /* Black */
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 150px;
+  }
+  
+  /* The navigation menu links */
+  .sidenav a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    color: rgb(213, 167, 30);
+    display: block;
+    line-height: 1.7;
+    letter-spacing: 1.6px;
+  }
+  
+  /* When you mouse over the navigation links, change their color */
+  .sidenav a:hover {
+    color: #f1f1f1;
+  }
+  
+  /* Style page content */
+  .main {
+    margin-left: 160px; /* Same as the width of the sidebar */
+    padding: 0px 10px;
+  }
+
+
 /* page 2 css*/
 
 .msgp2 {
@@ -159,10 +191,10 @@ h1, h2, h3, h4 {
     color: #050710;
     grid-column: 6/10;
     grid-row: 6/7;
-    width: 70%;
+    width: 80%;
     height: 250px;
     font-size: 20px;
-    margin-left: 270px;
+    margin-left: 140px;
     line-height: 1.4;
     letter-spacing: 1.4px;
     font-weight: 400;
@@ -173,8 +205,8 @@ h1, h2, h3, h4 {
 
 .comp-photo {
     width: 40%;
-    height: 40%;
-    margin-left: 130px;
+    height: 50%;
+    margin-left: 110px;
     position: relative;
     bottom: -20px;
 
@@ -183,9 +215,9 @@ h1, h2, h3, h4 {
 }
 .comp-photo2 {
     width: 40%;
-    height: 70%;
+    height: 50%;
     margin-top: -850px;
-    margin-left: 850px;
+    margin-left: 700px;
 
 
 }
@@ -194,14 +226,15 @@ h1, h2, h3, h4 {
 /* css for page 3 */
 
 .tech-photo {
-    width: 100%;
-    margin-right:  20px;
+    width: 90%;
+    margin-left: 80px;
 
 }
 
 .tech-photo2 {
-    width: 100%;
+    width: 90%;
     margin-top: -100px;
+    margin-left: 0px;
   
 }
 
@@ -211,10 +244,10 @@ h1, h2, h3, h4 {
     color: #050710;
     grid-column: 6/10;
     grid-row: 6/7;
-    width: 60%;
+    width: 80%;
     height: 400px;
     font-size: 24px;
-    margin-left: 270px;
+    margin-left: 120px;
     margin-top: -100px;
     line-height: 1.4;
     letter-spacing: 1.4px;
@@ -223,3 +256,9 @@ h1, h2, h3, h4 {
     position: relative;
 
 } 
+
+/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+  }
